--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,22 +7,10 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Run jest",
+            "name": "Run Tests",
             "runtimeExecutable": "jest",
             "cwd": "${workspaceFolder}",
             "args": []
         },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${file}",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
-        }
     ]
 }
