--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "clean-architecture-frontend",
-  "version": "1.0.0",
-  "description": "Your library description",
-  "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "name": "@denis_bruns/clean-architecture",
+  "version": "1.0.9",
+  "description": "Clean architecture implementation",
+  "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
+      "require": "./dist/index.js",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/types/index.d.ts"
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "dist/types"
   ],
   "scripts": {
-    "build": "tsup src/index.ts",
-    "dev": "tsup --watch",
+    "build": "tsc",
+    "lint": "eslint src/lib --ext .ts",
     "clean": "rimraf dist",
-    "lint": "eslint src --ext .ts",
-    "prepublishOnly": "npm run clean && npm run build",
-    "test": "node node_modules/jest/bin/jest.js src/tests --detectOpenHandles"
+    "prepublishOnly": "npm cache clean && npm run build",
+    "publish": "npm publish --access restricted",
+    "test": "jest src/tests --detectOpenHandles"
   },
-  
-  "keywords": [],
+  "keywords": [
+    "clean-architecture",
+    "typescript",
+    "gateway"
+  ],
   "author": "denis.bruns@btc-embedded.com",
   "license": "MIT",
   "devDependencies": {
     "@types/axios": "^0.9.36",
-    "@types/axios-mock-adapter": "^1.9.0",
     "@types/jest": "^29.5.14",
     "@types/jsonpath": "^0.2.4",
-    "axios": "^1.7.9",
-    "axios-mock-adapter": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
     "jest": "^29.7.0",
+    "rimraf": "^5.0.10",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "jest-mock-server": "^0.1.0",
+    "axios": "^1.7.9",
     "jsonpath": "^1.1.1",
-    "rxjs": "^7.8.1",
-    "ts-node": "^10.9.2"
+    "rxjs": "^7.8.1"
   }
 }
