--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@types/jsonpath": "^0.2.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^8.0.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.10",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
