--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.14",
     "@types/jsonpath": "^0.2.4",
+    "@types/aws-sdk": "latest",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "axios-mock-adapter": "^2.1.0",
@@ -47,6 +48,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "jsonpath": "^1.1.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@aws-sdk/client-secrets-manager": "latest", 
+    "@aws-sdk/client-ses": "latest", 
+    "@aws-sdk/credential-provider-ini": "latest"
   }
 }
